# mkdocs-polka

./: .codespellrc  .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  schema.json  sitemap.xml
python/bridge/: plugin.py
python/hooks/: hooks.py
search/: search_index.json
