[build-system]
requires = ["maturin>=1.13.1,<2.0.0"]
build-backend = "maturin"

[project]
name = "mkdocs-polka"
requires-python = ">=3.12,<3.15"
version = "0.0.0"

[dependency-groups]
dev = ["maturin>=1.13.1,<2.0.0", "mkdocs-material>=9.7.6,<10.0.0", "prek>=0.3.8,<1.0.0"]

[project.entry-points."mkdocs.plugins"]
bridge = "bridge.plugin:BridgePlugin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.uv]
managed = true
# https://github.com/squidfunk/mkdocs-material/issues/8478
override-dependencies = ["click==8.2.1"]
